--- a/01-MathReview/01-MathReview.vcxproj
+++ b/01-MathReview/01-MathReview.vcxproj
@@ -110,6 +110,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="Mathutils.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Mathutils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
