Added a menu and created a background (imporvement?)

--- a/Rain/Rain.vcxproj
+++ b/Rain/Rain.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Help.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MainMenu.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="rain.cpp" />
     <ClCompile Include="Score.cpp" />
@@ -140,6 +141,7 @@
     <ClInclude Include="Emitter.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="Help.h" />
+    <ClInclude Include="MainMenu.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="rain.h" />
     <ClInclude Include="Score.h" />
