--- a/X-SFWTest/X-SFWTest.vcxproj.filters
+++ b/X-SFWTest/X-SFWTest.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="Transform.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Rigidbody.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
