Added circle collision

--- a/X-SFWTest/X-SFWTest.vcxproj.filters
+++ b/X-SFWTest/X-SFWTest.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Transform.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="DrawShapes.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Player.h">
@@ -33,6 +36,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Rigidbody.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DrawShapes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
