--- a/MathLib/MathLib.vcxproj
+++ b/MathLib/MathLib.vcxproj
@@ -112,12 +112,14 @@
   <ItemGroup>
     <ClInclude Include="Mat3.h" />
     <ClInclude Include="Mathutils.h" />
+    <ClInclude Include="Shapes.h" />
     <ClInclude Include="Vec2.h" />
     <ClInclude Include="Vec3.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Mat3.cpp" />
     <ClCompile Include="Mathutils.cpp" />
+    <ClCompile Include="Shapes.cpp" />
     <ClCompile Include="Vec2.cpp" />
     <ClCompile Include="Vec3.cpp" />
   </ItemGroup>
