--- a/X-SFWTest/X-SFWTest.vcxproj
+++ b/X-SFWTest/X-SFWTest.vcxproj
@@ -126,12 +126,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Collider.cpp" />
     <ClCompile Include="DrawShapes.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Transform.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Collider.h" />
+    <ClInclude Include="Controller.h" />
     <ClInclude Include="DrawShapes.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Rigidbody.h" />
