Sprite, transform, rigidbody,collider and collision

--- a/X-SFWTest/X-SFWTest.vcxproj
+++ b/X-SFWTest/X-SFWTest.vcxproj
@@ -138,6 +138,7 @@
     <ClInclude Include="DrawShapes.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Rigidbody.h" />
+    <ClInclude Include="Sprites.h" />
     <ClInclude Include="Transform.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
