--- a/X-SFWTest/X-SFWTest.vcxproj.filters
+++ b/X-SFWTest/X-SFWTest.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="Controller.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Sprites.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
