--- a/oBloodstained/oBloodstained.vcxproj
+++ b/oBloodstained/oBloodstained.vcxproj
@@ -129,12 +129,14 @@
     <ClCompile Include="Collider.cpp" />
     <ClCompile Include="Entities.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Menus.cpp" />
     <ClCompile Include="Transform.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Collider.h" />
     <ClInclude Include="Controller.h" />
     <ClInclude Include="Entities.h" />
+    <ClInclude Include="Menus.h" />
     <ClInclude Include="Rigidbody.h" />
     <ClInclude Include="Sprites.h" />
     <ClInclude Include="Transform.h" />
